# md2docx

./: README.md  pyproject.toml
.github/workflows/: docs.yml
src/md2docx/: __init__.py  __main__.py  cli.py  converter.py
src/md2docx/templates/: __init__.py  default.docx
